# AeonGUI

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README  README.md  astyle.bat  astyle.sh  astylerc  doxygen-custom.css  index.html  mingw32.yml  mingw64.yml  package-lock.json  package.json  params.json  vcpkg-configuration.json  vcpkg.json
agg/: readme.txt
agg/src/: CMakeLists.txt  agg_gsv_text.cpp
agg/src/ctrl/: agg_cbox_ctrl.cpp  agg_rbox_ctrl.cpp  agg_slider_ctrl.cpp
agg/src/platform/: CMakeLists.txt
agg/src/platform/win32/: agg_platform_support.cpp
android/: AndroidManifest.xml  build.xml
cmake/: Doxyfile.in  FixCompileCommands.cmake  PKGBUILD-arch.in  PKGBUILD-msys2.in  aeongui-config.cmake  aeongui.rb.in  astyle.cmake  c_cpp_properties.json.in  cmake-kits.json.in  duktape.cmake  freetype.cmake  functions.cmake  gmock.cmake  launch.json.in  libcss.cmake  libpng.cmake  libxml2.cmake  litehtml.cmake  opensans.cmake  parser.cmake  pre-commit.in  settings.json.in  v8.cmake  (+7 more)
core/: AABB.cpp  AeonGUI.cpp  Button.cpp  CMakeLists.txt  CSS3Tokenizer.cpp  CSSSelectHandler.cpp  CSSSelectHandler.hpp  CSSSelector.cpp  CairoCanvas.cpp  CairoCanvas.hpp  CairoPath.cpp  CairoPath.hpp  Canvas.cpp  Color.cpp  Cursor.cpp  Document.cpp  DocumentContainer.cpp  DrawCommand.cpp  Duktape.cpp  Element.cpp  ElementFactory.cpp  Factory.h  Font.cpp  FontDatabase.cpp  FontLayout.cpp  HTMLLayoutEngine.cpp  Image.cpp  JavaScript.cpp  JsObjectWrap.cpp  JsV8.cpp  MainWindow.cpp  Matrix2x2.cpp  Matrix2x3.cpp  Matrix3x3.cpp  Overlay.cpp  PangoFontLayout.cpp  PangoTextLayout.cpp  PangoTextLayout.hpp  Path.cpp  RasterImage.cpp  (+19 more)
core/crc/: crc.c  crc.h  main.c
core/cuda/: Renderer.cu  cuda_functions.h  nearest.cu
core/dom/: Attribute.cpp  CSSSelectHandler.cpp  CSSSelectHandler.h  DOMMatrix.cpp  DOMMatrixReadOnly.cpp  DOMPoint.cpp  DOMPointReadOnly.cpp  DOMRect.cpp  DOMRectReadOnly.cpp  DOMString.h  Document.cpp  Element.cpp  Element.h  Event.cpp  Event.h  EventListener.cpp  EventListener.h  EventTarget.cpp  EventTarget.h  FocusEvent.cpp  HTMLBodyElement.cpp  HTMLDivElement.cpp  HTMLElement.cpp  HTMLHtmlElement.cpp  HTMLImageElement.cpp  HTMLParagraphElement.cpp  HTMLSpanElement.cpp  KeyboardEvent.cpp  Location.cpp  MouseEvent.cpp  Node.cpp  Node.h  SVGAnimateElement.cpp  SVGAnimateMotionElement.cpp  SVGAnimateTransformElement.cpp  SVGAnimatedEnumeration.cpp  SVGAnimatedLength.cpp  SVGAnimatedLengthList.cpp  SVGAnimatedNumberList.cpp  SVGAnimatedPreserveAspectRatio.cpp  (+56 more)
core/elements/: Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h  G.cpp  G.h  Line.cpp  Line.h  Path.cpp  Path.h  Polygon.cpp  Polygon.h  Polyline.cpp  Polyline.h  Rect.cpp  Rect.h  SVG.cpp  SVG.h  SVGCircleElement.cpp  SVGCircleElement.h  SVGDefsElement.cpp  SVGDefsElement.h  SVGElement.cpp  SVGElement.h  SVGEllipseElement.cpp  SVGEllipseElement.h  SVGGElement.cpp  SVGGElement.h  SVGGeometryElement.cpp  SVGGeometryElement.h  SVGGradientElement.cpp  SVGGradientElement.h  SVGGraphicsElement.cpp  SVGGraphicsElement.h  SVGLineElement.cpp  SVGLineElement.h  SVGLinearGradientElement.cpp  SVGLinearGradientElement.h  SVGPathElement.cpp  SVGPathElement.h  (+14 more)
core/idl/: CMakeLists.txt  SVG.json  SVG2.idl  SVG2.json  dom.json  extract_idl.py  generate_cxx_api.py
core/parsers/: css.l  css.ypp  css_parser.cpp  css_parser.hpp  dstype.h  dstype.hpp  path_data.l  path_data.ypp  path_data_lexer.cpp  path_data_parser.cpp  path_data_parser.hpp  style.l  style.ypp  style_lexer.cpp  style_parser.cpp  style_parser.hpp  stylestype.h
core/resources/: close.c  close.h  close_down.c  close_down.h  maximize.c  maximize.h  maximize_down.c  maximize_down.h  minimize.c  minimize.h  minimize_down.c  minimize_down.h  restore.c  restore.h  restore_down.c  restore_down.h  scrolldown.c  scrolldown.h  scrolldownpressed.c  scrolldownpressed.h  scrollleft.c  scrollleft.h  scrollleftpressed.c  scrollleftpressed.h  scrollright.c  scrollright.h  scrollrightpressed.c  scrollrightpressed.h  scrollup.c  scrollup.h  scrolluppressed.c  scrolluppressed.h
core/sha1/: sha1.cpp  sha1.h
core/tests/: CMakeLists.txt  OverlayTest.cpp
css/: .gitignore  0000-libcss-fill-and-stroke.patch  0001-libcss-transform.patch  CMakeLists.txt  README.md  libcss.patch  make-aliases.py
demos/Direct3D12/: CMakeLists.txt  WindowsDirect3D12.cpp
demos/LinuxOpenGL/: CMakeLists.txt  LinuxOpenGL.cpp
demos/Metal/: CMakeLists.txt  MacOSMetal.mm  Shaders.metal
demos/OpenGL/: CMakeLists.txt  Common.h  LinuxOpenGL.cpp  MacOSOpenGL.mm  WindowsOpenGL.cpp
demos/ProofOfConcept/: CMakeLists.txt  Window.cpp  Window.h
demos/Vulkan/: CMakeLists.txt  LinuxVulkan.cpp  MacOSVulkan.mm  VulkanRenderer.h  WindowsVulkan.cpp
demos/Vulkan/shaders/: screen.frag  screen.vert
demos/WindowsOpenGL/: CMakeLists.txt  WindowsOpenGL.cpp
demos/WindowsOpenGL15/: CMakeLists.txt  WindowsOpenGL15.cpp
demos/WindowsOpenGL31/: CMakeLists.txt  WindowsOpenGL31.cpp
demos/sdlgl/: CMakeLists.txt  sdlgl.cpp
renderers/OpenGL/: .gitignore  CMakeLists.txt  OpenGL.cpp  OpenGL.h  OpenGLContext.cpp  OpenGLRenderer.cpp  OpenGLSurface.cpp  convert-shaders  convert-shaders.bat  fragment_shader  fragment_shader.h  vertex_shader  vertex_shader.h  vertex_shader.txt
renderers/OpenGL15/: CMakeLists.txt  OpenGLRenderer.cpp
renderers/OpenGL31/: CMakeLists.txt  OpenGLRenderer.cpp  OpenGLRenderer.cpp.h  convert-shaders  fragment_shader.txt
tests/: Benchmark.cpp  CMakeLists.txt  CSS3TokenizerTest.cpp  CursorTest.cpp  DOMMatrixReadOnlyTest.cpp  DOMMatrixTest.cpp  DOMPointReadOnlyTest.cpp  DOMPointTest.cpp  DOMRectReadOnlyTest.cpp  DOMRectTest.cpp  DocumentTest.cpp  ErrorHandlingTest.cpp  HTMLElementFactoryTest.cpp  HTMLLayoutEngineTest.cpp  HTMLLayoutSpikeTest.cpp  HTMLRenderTest.cpp  HitTestTest.cpp  Location.cpp  Main.cpp  NodeTest.cpp  RasterImageTest.cpp  SMILAnimationTest.cpp  SVGAnimatedTypesTest.cpp  SVGImageElementTest.cpp  SVGLengthTest.cpp  SVGScriptElementTest.cpp  ThreadSafetyTest.cpp  UIEventsTest.cpp  test_plugin.c
tools/font2c/: CMakeLists.txt  font2c.cpp  fontspec.txt  pcx.cpp  pcx.h
(+254 files in other folders)
